text area speech

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
     <h1>BATCH CONSTRUCTION PVT LTD</h1>
+
+
+    <br>
+    <div>
+
+        <textarea name="" id="textArea" cols="30" rows="10" placeholder="Type your ticket"></textarea><br>
+        <button id="readText">Read your text</button>
+
+        
+    </div>
     <script src="app.js"></script>
     
 </body>
